--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,10 +18,10 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">전체 글</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/1" | relative_url }}">App-review</a>
+          <a class="nav-link" href="{{ "/category/app-review" | relative_url }}">App-review</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/2" | relative_url }}">Insight</a>
+          <a class="nav-link" href="{{ "/category/insight" | relative_url }}">App-review</a>
         </li>
       </ul>
     </div>
