--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="{{ "/category/app-review" | relative_url }}">App-review</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/insight" | relative_url }}">App-review</a>
+          <a class="nav-link" href="{{ "/category/insight" | relative_url }}">Insight</a>
         </li>
       </ul>
     </div>
