퍼머링크수정

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link" href="{{ "/posts" | relative_url }}">전체 글</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ "/category/app-review" | relative_url }}">Appreview</a>
+          <a class="nav-link" href="{{ "/category/appreview" | relative_url }}">appreview</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ "/category/insight" | relative_url }}">Insight</a>
